test/test_examples/syntactic_examples/syntax_error/error_fun_def_10.zig
// Syntax error: protypes aren't allowed

const ifj = @import("ifj24.zig"); 

pub fn foo() i32;